--- a/search-pa/tsconfig.json
+++ b/search-pa/tsconfig.json
@@ -23,6 +23,6 @@
       "@/components/*": ["./src/components/*"],
     },
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/courses"],
   "exclude": ["node_modules"],
 }
