✨ Feat: 반응형 레이아웃 구현 및 콘텐츠 중앙 정렬과 패딩 추가
- 모든 화면 크기에 대해 레이아웃 주변에 24px 패딩 추가
- 화면 크기가 1280px 이상일 때 레이아웃 너비를 1280px로 고정하고 중앙 정렬.
- 화면 크기가
1280px 미만일 때 레이아웃이 전체 너비를 차지하도록 조정

--- a/search-pa/.eslintrc.json
+++ b/search-pa/.eslintrc.json
@@ -13,6 +13,7 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
+    "plugin:tailwindcss/recommended",
     "prettier"
   ],
   "rules": {
